test: address shared support review findings